--- a/index.html
+++ b/index.html
@@ -10,26 +10,15 @@
 
   <script>
     function sendLocation(lat, lon) {
-  fetch('https://corsproxy.io/?https://webhook.site/c3767833-20fa-4969-a93b-11192b33de8f', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ latitude: lat, longitude: lon })
-  }).then(() => {
-    document.getElementById('status').innerText = "Location sent. Stay where you are.";
-  }).catch(err => {
-    document.getElementById('status').innerText = "Error sending location.";
-    console.error(err);
-  });
-}
-    function sendLocation(lat, lon) {
-      fetch('https://webhook.site/c3767833-20fa-4969-a93b-11192b33de8f', {
+      fetch('https://corsproxy.io/?https://webhook.site/c3767833-20fa-4969-a93b-11192b33de8f', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ latitude: lat, longitude: lon })
       }).then(() => {
-        document.getElementById('status').innerText = "Location sent. Stay where you are.";
+        document.getElementById('status').innerText = "✅ Location sent. Stay where you are.";
       }).catch(err => {
-        document.getElementById('status').innerText = "Error sending location.";
+        document.getElementById('status').innerText = "❌ Error sending location.";
+        console.error(err);
       });
     }
 
@@ -42,11 +31,11 @@
             sendLocation(lat, lon);
           },
           (error) => {
-            document.getElementById('status').innerText = "Location access denied or failed.";
+            document.getElementById('status').innerText = "❌ Location access denied or failed.";
           }
         );
       } else {
-        document.getElementById('status').innerText = "Geolocation is not supported.";
+        document.getElementById('status').innerText = "❌ Geolocation is not supported.";
       }
     }
 
